fixed all functionality

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,14 +8,17 @@ spring.cloud.gateway.discovery.locator.enabled= true
 spring.cloud.gateway.routes[0].id=booking-service
 spring.cloud.gateway.routes[0].uri=lb://BOOKING-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/locations/**
+spring.cloud.gateway.routes[0].filters[0]=CircuitBreaker=name=locationsCircuitBreaker
 
 spring.cloud.gateway.routes[1].id=booking-service
 spring.cloud.gateway.routes[1].uri=lb://BOOKING-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/flights/**
+spring.cloud.gateway.routes[1].filters[0]=CircuitBreaker=name=flightsCircuitBreaker
 
 spring.cloud.gateway.routes[2].id=booking-service
 spring.cloud.gateway.routes[2].uri=lb://BOOKING-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/payment/**
+spring.cloud.gateway.routes[2].filters[0]=CircuitBreaker=name=paymentCircuitBreaker
 
 
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:5173
@@ -23,4 +26,13 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
 
-logging.level.org.springframework.cloud.gateway=DEBUG
+resilience4j.circuitbreaker.configs.default.slidingWindowSize=5
+resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=5s
+
+
+management.endpoints.web.exposure.include=* 
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
+
