--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.cloud.config.uri=http://localhost:8888
 spring.config.import=optional:configserver:http://localhost:8888
 
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
